[package]
name = "silk-router"
version = "0.1.1"
authors = ["Eli Green <eli@zigr.org>"]
description = "A library for URL routing"
repository = "https://github.com/detzgk/silk"
categories = ["web-programming::http-server"]
license = "MIT"
edition = "2018"

[dependencies]
num = "0.1.42" # TODO: replace with TryFrom when it stabilizes
